@@ -24,6 +24,11 @@ Isabelle_System.Service in Isabelle/Scala. This supersedes former
 INCOMPATIBILITY.
 
 
+*** Pure ***
+
+* Definitions in locales produce rule which can be added as congruence
+rule to protect foundational terms during simplification.
+
 
 New in Isabelle2020 (April 2020)
 --------------------------------
